# ChangeLog for sci-libs/cgnslib
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
  cgnslib-2.5.3.ebuild:
  Quoting.

  04 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de> +cgnslib-2.5.3.ebuild:
  Version bump.

  27 Nov 2007; Oliver Borm (boroli) oli.borm@web.de cgnslib-2.5.2.ebuild:
  Added additional die commands to ebuild, thanks to Maxim Loginov.

  26 Nov 2007; Oliver Borm (boroli) oli.borm@web.de cgnslib-2.5.2.ebuild:
  Corrected some typos in the ebuild, thanks to Maxim Loginov.

  20 Nov 2007; Oliver Borm (boroli) oli.borm@web.de +metadata.xml,
  +cgnslib-2.5.2.ebuild:
  New ebuild for bug 176455.
