@@ -1,6 +1,4 @@
-DIST cgnslib_2.5-2.tar.gz 390011 RMD160 9ef07fd8ebcebb74ab9a3cc39303fe2e3b722b7e SHA1 b1b5a8e9f73f12c04e5ebda92f9d6e8a347ecf30 SHA256 5e12a8042f1564a0d16f5eebecc79508684de68e0ba192cf44217e075d41de2c
 DIST cgnslib_2.5-3.tar.gz 394362 RMD160 23c4f2b733a332cf75a3942d2ae8f3f96e1d719f SHA1 174d5e5b180ecd47085cbee19ebe24985826ed92 SHA256 6d8cdf4cd807efa2766f089ec6440812ed4352f0342476cd949cff50a2302ca9
-EBUILD cgnslib-2.5.2.ebuild 1565 RMD160 39ad2b400eb0623971fd86ceb5347831a3f384ea SHA1 859bd3e74feec9c78a8f15ef1edddff236425bb0 SHA256 57471225860f69a3598bcf5daa48373b45069e607ed1ab352be70303b09fe9fe
 EBUILD cgnslib-2.5.3.ebuild 1769 RMD160 37bc7d2761f9285ffb21e6d153995761cde69995 SHA1 710f6046daf437f3eccb700263988dfbcdcbd97d SHA256 0ef5d3303d099232de2a889467a9d4ef711cecd567eb952ef59a211640228ab2
-MISC ChangeLog 706 RMD160 6ef70de8bd4e2bee32fa733fcb083e36dad39725 SHA1 b8b6f28929b3864c2e941027a0a2adcc0132259d SHA256 1d269fdcea89df5ce10c4a2451bfb1244354ca4bf1710b0ccfde669386270506
+MISC ChangeLog 809 RMD160 d28e123db8b36b39919646dd519a3b8f99a20f8b SHA1 f4b10180f75a6a8e5c05ef14bf6832e211831764 SHA256 01c407b38227cdfb8a422c998556086fdffa2c809336c73739cc81beab9a12f3
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
