@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
+  -cgnslib-2.5.2.ebuild:
+  Remove old version
+
   06 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
   cgnslib-2.5.3.ebuild:
   Quoting.
